# TinyMaix-espidf_test

./: .clangd  .gitignore  CMakeLists.txt  sdkconfigs
main/: CMakeLists.txt  main.cpp  tests.h
main/lib/tinymaix/: CMakeLists.txt  tm_port.h
main/tinymaix_tests/: CMakeLists.txt  test_cifar.c  test_mbnet128.c  test_mnist.c  test_vww96.c
main/tmdl/: cifar10_q.h  mbnet128_0.25_q.h  mnist_valid_q.h
